# gud-math

./: .gitignore  Cargo.toml  README.md  package.json
.changeset/: angry-zebras-boil.md  config.json  famous-spiders-allow.md  hip-trams-peel.md
.github/workflows/: pull-request.ts  release.yml
crates/fixed/: Cargo.toml
crates/fixed-js/: CHANGELOG.md  Cargo.toml  package.json
crates/fixed-js/scripts/: build.ts
crates/fixed-js/src/: lib.rs
crates/fixed-point/: Cargo.toml  README.md
crates/fixed-point-bindings/: CHANGELOG.md  Cargo.toml  package.json
crates/fixed-point-bindings/scripts/: build.ts  syncVersion.ts
crates/fixed-point-bindings/src/: formatting.rs  lib.rs  utils.rs
crates/fixed-point/src/: fixed_point.rs  lib.rs  macros.rs  math.rs  utils.rs  value.rs  value_impls.rs
crates/mantissa/: Cargo.toml  README.md
crates/mantissa-js/: CHANGELOG.md  Cargo.toml  package.json
crates/mantissa-js/scripts/: build.ts
crates/mantissa-js/src/: lib.rs
crates/mantissa.js/: Cargo.toml  README.md  package.json  tsconfig.json
crates/mantissa.js/scripts/: build.ts
crates/mantissa.js/src/: formatting.rs  utils.rs
crates/mantissa.rs/src/: macros.rs  math.rs  utils.rs  value_impls.rs
examples/: package.json  tsconfig.json
examples/src/: index.ts
scripts/: release.sh
