[package]
name = "fixed-point"
edition = "2021"
version = "0.0.0"
authors = ["Ryan Goree (https://github.com/ryangoree)"]
readme = "README.md"
license = "Apache-2.0"
description = "Fixed-point math in Rust, inspired by FixedPointMathLib.sol from transmissions11/solmate, originally forked from delvtech/hyperdrive-rs."

[dependencies]
ethers = { version = "2.0.11", default-features = false }
eyre = "0.6.12"
paste = "1.0.15"
rand = "0.8.5"

[dev-dependencies]
ethers = "2.0.11"
tokio = { version = "1", features = ["full"] }
proptest = "1.6.0"
