[package]
name = "mantissa-js"
# This version will be overwritten by the build script to match the version in
# the crate's package.json which is managed by changesets.
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Ryan Goree (https://github.com/ryangoree)"]
description = "Effortless fixed-point math in TypeScript"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
ethers = { version = "2.0.14", default-features = false }
js-sys = "0.3.69"
ts-macro = { git = "https://github.com/ryangoree/wasm-utils-rs" }
utils-core = { git = "https://github.com/ryangoree/wasm-utils-rs" }
wasm-bindgen = "0.2.92"

# needed to enable the "js" feature for compatibility with wasm,
# see https://docs.rs/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

mantissa = { path = "../mantissa" }
